сделала изменения в секции footer ; изменила язык во 2-ой строке
обернула однотипный текст в список

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -69,8 +69,6 @@
       <section>
         <h2>Чем мы занимаемся</h2>
 
-
-
         <a href="">
           <img src="./images/work/box 1.jpg" alt="Computer" width="370"
           height="294"
@@ -138,17 +136,13 @@
     <a href="">WebStudio</a>
 
     <address>
+      <ul>
+        <li>г. Киев, пр-т Леси Украинки, 26</li>
 
-        <p>
-            г. Киев, пр-т Леси Украинки, 26
-        </p>
-        <p>
-            info@example.com
-        </p>
+        <li>info@example.com</li>
 
-        <p>
-            +38 099 111 11 11
-        </p>
+        <li>+38 099 111 11 11</li>
+      </ul>
     </address>
   </body>
 </html>
