--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <body>
     <!--Секция хедер-->
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li>
-            <a href="">Студия</a>
+            <a href="./index.html">Студия</a>
           </li>
           <li>
-            <a href="">Портфолио</a>
+            <a href="./index.html">Портфолио</a>
           </li>
           <li>
-            <a href="">Контакты</a>
+            <a href="./index.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -29,101 +29,139 @@
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tell:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
-
-      <h1>Эффективные решения для вашего бизнеса</h1>
-
-      <button type="button">Заказать услугу</button>
     </header>
 
     <!--Блок уникального контента-->
     <main>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+
+        <button type="button">Заказать услугу</button>
+      </section>
+
       <!--Секция особенности-->
       <section>
+        <h2>Наши особенности</h2>
         <ul>
-          <li>Внимание к деталям</li>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-          <li>Пунктуальность</li>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-          <li>Планирование</li>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-          <li>Современные технологии</li>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
         </ul>
       </section>
       <!--Секция наши занятия-->
       <section>
         <h2>Чем мы занимаемся</h2>
 
-        <a href="">
-          <img src="./images/work/box 1.jpg" alt="Computer" width="370"
-          height="294"
-        </a>
+        <ul>
+          <li>
+            <img
+              src="./images/work/box1.jpg"
+              alt="Computer"
+              width="370"
+              height="294"
+            />
+          </li>
 
-        <a href="">
-          <img src="./images/work/box 2.jpg" alt="Telephone" width="370"
-          height="294"
-        </a>
+          <li>
+            <img
+              src="./images/work/box2.jpg"
+              alt="Telephone"
+              width="370"
+              height="294"
+            />
+          </li>
 
-        <a href="">
-          <img src="./images/work/box 3.jpg" alt="I Pad" width="370"
-          height="294"
-        </a>
+          <li>
+            <img
+              src="./images/work/box3.jpg"
+              alt="I Pad"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
       </section>
 
       <!--Секция наша команда-->
       <section>
-        <h3>Наша команда</h3>
+        <h2>Наша команда</h2>
         <ul>
           <li>
-            <a href="">
-              <img src="./images/team/product designer.jpg" alt="Product
-              designer" width="270px" height="260"
-            </a>
+            <img
+              src="./images/team/product designer.jpg"
+              alt="Product
+              designer"
+              width="270"
+              height="260"
+            />
 
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <a href="">
-              <img src="./images/team/developer.jpg" alt="Frontend developer"
-              width="270px" height="260"
-            </a>
+            <img
+              src="./images/team/developer.jpg"
+              alt="Frontend developer"
+              width="270"
+              height="260"
+            />
 
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <a href="">
-              <img src="./images/team/marketing.jpg" alt="Marketing"
-              width="270px" height="260"
-            </a>
+            <img
+              src="./images/team/marketing.jpg"
+              alt="Marketing"
+              width="270"
+              height="260"
+            />
 
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <a href="">
-              <img src="./images/team/ui designer.jpg" alt="UI designer"
-              width="270px" height="260"
-            </a>
-            <p>Михаил Ермаков</p>
+            <img
+              src="./images/team/ui designer.jpg"
+              alt="UI designer"
+              width="270"
+              height="260"
+            />
+
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -133,15 +171,24 @@
     <!--Секция футер-->
     <footer></footer>
 
-    <a href="">WebStudio</a>
+    <a href="./index.html">WebStudio</a>
 
     <address>
       <ul>
-        <li>г. Киев, пр-т Леси Украинки, 26</li>
+        <li>
+          <a
+            href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
+            target="_blank"
+            rel="noopener noreferrer"
+            >г. Киев, пр-т Леси Украинки, 26</a
+          >
+        </li>
 
-        <li>info@example.com</li>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
 
-        <li>+38 099 111 11 11</li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
   </body>
