Изменила семантическую разметку сайта согласно Вашим замечаниям

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 
         <ul>
           <li>
-            <img
-              src="./images/work/box1.jpg"
+            <img src="./images/work/photo1.jpg"
               alt="Computer"
               width="370"
               height="294"
@@ -95,7 +94,7 @@
 
           <li>
             <img
-              src="./images/work/box2.jpg"
+              src="./images/work/photo2.jpg"
               alt="Telephone"
               width="370"
               height="294"
@@ -104,7 +103,7 @@
 
           <li>
             <img
-              src="./images/work/box3.jpg"
+              src="./images/work/photo3.jpg"
               alt="I Pad"
               width="370"
               height="294"
