--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 
         <ul>
           <li>
-            <img src="./images/work/photo1.jpg"
+            <img
+              src="./images/work/photo1.jpg"
               alt="Computer"
               width="370"
               height="294"
@@ -112,7 +113,8 @@
         </ul>
       </section>
 
-      <!--Секция наша команда-->
+
+       <!--Секция наша команда-->
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -168,7 +170,7 @@
     </main>
 
     <!--Секция футер-->
-    <footer></footer>
+    <footer>
 
     <a href="./index.html">WebStudio</a>
 
@@ -190,5 +192,7 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </address>
+  </footer>
   </body>
 </html>
+
