--- a/index.html
+++ b/index.html
@@ -5,48 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <!--Секция хедер-->
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a class="header-logo" href="./index.html"
+        >Web<span class="logo-colored">Studio</span></a
+      >
       <nav>
         <ul>
           <li>
-            <a href="./index.html">Студия</a>
+            <a class="link-studio" href="./index.html">Студия</a>
           </li>
           <li>
-            <a href="./index.html">Портфолио</a>
+            <a class="link-portfolio" href="./index.html">Портфолио</a>
           </li>
           <li>
-            <a href="./index.html">Контакты</a>
+            <a class="link-contacts" href="./index.html">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-contact" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
 
     <!--Блок уникального контента-->
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+      <section class="main-section">
+        <h1 class="main-title">
+          Эффективные решения<br />
+          для вашего бизнеса
+        </h1>
 
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="main-button">Заказать услугу</button>
       </section>
 
       <!--Секция особенности-->
       <section>
-        <h2>Наши особенности</h2>
-        <ul>
+        <ul class="features">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -82,7 +101,7 @@
       </section>
       <!--Секция наши занятия-->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="title-deals">Чем мы занимаемся</h2>
 
         <ul>
           <li>
@@ -114,11 +133,10 @@
         </ul>
       </section>
 
-
-       <!--Секция наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <!--Секция наша команда-->
+      <section class="team">
+        <h2 class="title-team">Наша команда</h2>
+        <ul class="team-list">
           <li>
             <img
               src="./images/team/product designer.jpg"
@@ -171,29 +189,35 @@
     </main>
 
     <!--Секция футер-->
-    <footer>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-colored">Studio</span></a
+      >
+      <address>
+        <ul class="footer-list">
+          <li>
+            <a
+              class="footer-adress"
+              href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
 
-    <a href="./index.html">WebStudio</a>
+          <li>
+            <a class="footer-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
 
-    <address>
-      <ul>
-        <li>
-          <a
-            href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
-            target="_blank"
-            rel="noopener noreferrer"
-            >г. Киев, пр-т Леси Украинки, 26</a
-          >
-        </li>
-
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
-  </footer>
+          <li>
+            <a class="footer-contact" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
-
