--- a/portfolio.html
+++ b/portfolio.html
@@ -5,31 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./portfolio.styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Секция хедер-->
     <header>
-      <a href="./index.html" .>WebStudio</a>
+      <a class="header-logo" href="./index.html"
+        >Web<span class="logo-colored">Studio</span></a
+      >
       <nav>
         <ul>
           <li>
-            <a href="./portfolio.html">Студия</a>
+            <a class="link-studio" href="./portfolio.html">Студия</a>
           </li>
           <li>
-            <a href="./portfolio.html">Портфолио</a>
+            <a class="link-portfolio" href="./portfolio.html">Портфолио</a>
           </li>
           <li>
-            <a href="./portfolio.html">Контакты</a>
+            <a class="link-contacts" href="./portfolio.html">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="contacts">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -39,20 +52,20 @@
     <main></main>
 
     <section>
-      <ul>
+      <ul class="main-list">
         <li>
-          <button type="button">Все</button>
+          <button type="button" class="main-button">Все</button>
         </li>
-        <li>Веб-сайты</li>
-        <li>Приложения</li>
-        <li>Дизайн</li>
-        <li>Маркетинг</li>
+        <li class="link-web">Веб-сайты</li>
+        <li class="link-application">Приложения</li>
+        <li class="link-design">Дизайн</li>
+        <li class="link-marketing">Маркетинг</li>
       </ul>
     </section>
 
     <!--Секция портфолио-->
     <section>
-      <ul>
+      <ul class="portfolio">
         <li>
           <img src="./images.portfolio/img.jpg" alt="Techno krjak" />
           <h3>Технокряк</h3>
@@ -100,14 +113,15 @@
         </li>
       </ul>
     </section>
-
-    <footer>
-        <a href="./index.html">WebStudio</a>
+<!-- Секция Footer -->
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+      >Web<span class="footer-colored">Studio</span></a>
 
         <address>
-          <ul>
+          <ul class="footer-list">
             <li>
-              <a
+              <a class="footer-adress"
                 href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -116,10 +130,10 @@
             </li>
     
             <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
     
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
         </address>
 
