--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
       <nav>
         <ul>
           <li>
-            <a class="link-studio" href="./portfolio.html">Студия</a>
+            <a class="link-studio" href="./index.html">Студия</a>
           </li>
           <li>
-            <a class="link-portfolio" href="./portfolio.html">Портфолио</a>
+            <a class="link-portfolio" href="./index.html">Портфолио</a>
           </li>
           <li>
-            <a class="link-contacts" href="./portfolio.html">Контакты</a>
+            <a class="link-contacts" href="./index.html">Контакты</a>
           </li>
         </ul>
       </nav>
