--- a/portfolio.html
+++ b/portfolio.html
@@ -49,17 +49,24 @@
 
     <!--Блок уникального контента-->
 
-    <main></main>
+    <main class="main-section">
 
-    <section>
-      <ul class="main-list">
+      <section>
+      <ul class="button-list">
         <li>
-          <button type="button" class="main-button">Все</button>
+          <button type="button" class="button-all">Все</button>
         </li>
-        <li class="link-web">Веб-сайты</li>
-        <li class="link-application">Приложения</li>
-        <li class="link-design">Дизайн</li>
-        <li class="link-marketing">Маркетинг</li>
+
+        <li><button type="button" class="button-web"> Веб-сайты</button></li>
+        <li >
+          <button type="button"class="button-application">Приложения</button>
+        </li>
+        <li >
+          <button type="button" class="button-design">Дизайн</button>
+        </li>
+        <li >
+          <button type="button"class="button-marketing">Маркетинг</button>
+        </li>
       </ul>
     </section>
 
@@ -67,52 +74,53 @@
     <section>
       <ul class="portfolio">
         <li>
-          <img src="./images.portfolio/img.jpg" alt="Techno krjak" />
+          <img src="./images.portfolio/img.jpg" alt="Techno krjak" width="370" height="294"/>
           <h3>Технокряк</h3>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="./images.portfolio/img1.jpg" alt="New Orlean" />
+          <img src="./images.portfolio/img1.jpg" alt="New Orlean" width="370" height="294" />
           <h3>Постер New Orlean vs Golden Star</h3>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./images.portfolio/img2.jpg" alt="Sea Food" />
+          <img src="./images.portfolio/img2.jpg" alt="Sea Food" width="370" height="294"/>
           <h3>Ресторан Seafood</h3>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="./images.portfolio/img3.jpg" alt="Prime" />
+          <img src="./images.portfolio/img3.jpg" alt="Prime" width="370" height="294"/>
           <h3>Проект Prime</h3>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./images.portfolio/img4.jpg" alt="Boxes" />
+          <img src="./images.portfolio/img4.jpg" alt="Boxes" width="370" height="294"/>
           <h3>Проект Boxes</h3>
           <p>Приложение</p>
         </li>
         <li>
-          <img src="./images.portfolio/img5.jpg" alt="Inspiration" />
+          <img src="./images.portfolio/img5.jpg" alt="Inspiration" width="370" height="294"/>
           <h3>Inspiration has no Borders</h3>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="./images.portfolio/img6.jpg" alt="Limited Edition" />
+          <img src="./images.portfolio/img6.jpg" alt="Limited Edition" width="370" height="294"/>
           <h3>Издание Limited Edition</h3>
           <p>Дизайн</p>
         </li>
         <li>
-          <img src="./images.portfolio/img7.jpg" alt="LAB" />
+          <img src="./images.portfolio/img7.jpg" alt="LAB" width="370" height="294"/>
           <h3>Проект LAB</h3>
           <p>Маркетинг</p>
         </li>
         <li>
-          <img src="./images.portfolio/img8.jpg" alt="Growing Business" />
+          <img src="./images.portfolio/img8.jpg" alt="Growing Business" width="370" height="294"/>
           <h3>Growing Business</h3>
           <p>Приложение</p>
         </li>
       </ul>
     </section>
+  </main>
 <!-- Секция Footer -->
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
