Сделала изменения в файлах  html и css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <nav>
         <ul>
           <li>
-            <a class="link-studio" href="./portfolio.html">Студия</a>
+            <a class="link-studio-current" href="./portfolio.html">Студия</a>
           </li>
           <li>
             <a class="link-portfolio" href="./portfolio.html">Портфолио</a>
@@ -40,7 +40,7 @@
 
       <ul class="contacts">
         <li>
-          <a class="header-mail" href="mailto:info@devstudio.com"
+          <a class="header-mail-current" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
@@ -65,10 +65,10 @@
 
       <!--Секция особенности-->
       <section>
-        
+       <h2 class="visually-hidden">Наши особенности</h2> 
         <ul class="features">
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
@@ -76,7 +76,7 @@
           </li>
 
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
@@ -84,7 +84,7 @@
           </li>
 
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
@@ -92,7 +92,7 @@
           </li>
 
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -102,7 +102,7 @@
       </section>
       <!--Секция наши занятия-->
       <section>
-        <h2 class="title-deals">Чем мы занимаемся</h2>
+        <h3 class="title-deals">Чем мы занимаемся</h3>
 
         <ul>
           <li>
@@ -135,8 +135,8 @@
       </section>
 
       <!--Секция наша команда-->
-      <section class="team">
-        <h3 class="title-team">Наша команда</h3>
+      <section>
+        <h4 class="team-title">Наша команда</h4>
         <ul class="team-list">
           <li>
             <img
@@ -147,7 +147,7 @@
               height="260"
             />
 
-            <h4>Игорь Демьяненко</h4>
+            <h5>Игорь Демьяненко</h5>
             <p>Product Designer</p>
           </li>
 
@@ -159,7 +159,7 @@
               height="260"
             />
 
-            <h4>Ольга Репина</h4>
+            <h5>Ольга Репина</h5>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -170,7 +170,7 @@
               height="260"
             />
 
-            <h4>Николай Тарасов</h4>
+            <h5>Николай Тарасов</h5>
             <p>Marketing</p>
           </li>
 
@@ -182,7 +182,7 @@
               height="260"
             />
 
-            <h4>Михаил Ермаков</h4>
+            <h5>Михаил Ермаков</h5>
             <p>UI Designer</p>
           </li>
         </ul>
