--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
       <nav>
         <ul>
           <li>
-            <a class="link-studio" href="./portfolio.html">Студия</a>
+            <a class="link-studio" href="./index.html">Студия</a>
           </li>
           <li>
-            <a class="link-portfolio" href="./portfolio.html">Портфолио</a>
+            <a class="link-portfolio-current" href="./index.html">Портфолио</a>
           </li>
           <li>
-            <a class="link-contacts" href="./portfolio.html">Контакты</a>
+            <a class="link-contacts" href="./index.html">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -47,75 +47,74 @@
       </ul>
     </header>
 
-    <!--Блок уникального контента-->
+   <!--Секция портфолио-->
 
-    <main class="main-section">
+    <main>
 
-      <section>
+      <section class="section-portfolio">
       <ul class="button-list">
         <li>
           <button type="button" class="button-all">Все</button>
         </li>
 
-        <li><button type="button" class="button-web"> Веб-сайты</button></li>
+        <li><button type="button" class="button-all"> Веб-сайты</button></li>
         <li >
-          <button type="button"class="button-application">Приложения</button>
+          <button type="button"class="button-all">Приложения</button>
         </li>
         <li >
-          <button type="button" class="button-design">Дизайн</button>
+          <button type="button" class="button-all">Дизайн</button>
         </li>
         <li >
-          <button type="button"class="button-marketing">Маркетинг</button>
+          <button type="button"class="button-all">Маркетинг</button>
         </li>
       </ul>
-    </section>
+    
+      <h1 class="visually-hidden">Портфолио</h1>
 
-    <!--Секция портфолио-->
-    <section>
-      <ul class="portfolio">
+   <ul class="portfolio">
         <li>
           <img src="./images.portfolio/img.jpg" alt="Techno krjak" width="370" height="294"/>
-          <h3>Технокряк</h3>
+          <h2>Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
           <img src="./images.portfolio/img1.jpg" alt="New Orlean" width="370" height="294" />
-          <h3>Постер New Orlean vs Golden Star</h3>
+          <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p>
         </li>
         <li>
           <img src="./images.portfolio/img2.jpg" alt="Sea Food" width="370" height="294"/>
-          <h3>Ресторан Seafood</h3>
+          <h2>Ресторан Seafood</h2>
           <p>Приложение</p>
         </li>
         <li>
           <img src="./images.portfolio/img3.jpg" alt="Prime" width="370" height="294"/>
-          <h3>Проект Prime</h3>
+          <h2>Проект Prime</h2>
           <p>Маркетинг</p>
         </li>
         <li>
           <img src="./images.portfolio/img4.jpg" alt="Boxes" width="370" height="294"/>
-          <h3>Проект Boxes</h3>
+          <h2>Проект Boxes</h2>
           <p>Приложение</p>
         </li>
         <li>
           <img src="./images.portfolio/img5.jpg" alt="Inspiration" width="370" height="294"/>
-          <h3>Inspiration has no Borders</h3>
+          <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
           <img src="./images.portfolio/img6.jpg" alt="Limited Edition" width="370" height="294"/>
-          <h3>Издание Limited Edition</h3>
+          <h2>Издание Limited Edition</h2>
           <p>Дизайн</p>
         </li>
         <li>
           <img src="./images.portfolio/img7.jpg" alt="LAB" width="370" height="294"/>
-          <h3>Проект LAB</h3>
+          <h2>Проект LAB</h2>
           <p>Маркетинг</p>
         </li>
         <li>
           <img src="./images.portfolio/img8.jpg" alt="Growing Business" width="370" height="294"/>
-          <h3>Growing Business</h3>
+          <h2>Growing Business</h2>
           <p>Приложение</p>
         </li>
       </ul>
