--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <!--Секция наша команда-->
       <section>
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="title-h2">Наша команда</h2>
         <ul class="team-list">
           <li>
             <img
