--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       </ul>
     </header>
 
-    <!--Блок уникального контента-->
+    
     <main>
+      <!--Секция Герой-->
       <section class="main-section">
         <h1 class="main-title">
           Эффективные решения<br />
