--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     />
   </head>
   <body>
-    <!--Секция хедер-->
+    <!--Секция хедер Портфолио-->
     <header>
       <a class="header-logo" href="./index.html"
         >Web<span class="logo-colored">Studio</span></a
@@ -120,7 +120,7 @@
       </ul>
     </section>
   </main>
-<!-- Секция Footer -->
+<!-- Секция Footer Портфолио-->
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
       >Web<span class="footer-colored">Studio</span></a>
