--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,80 +21,74 @@
   <body>
     <!--Секция хедер-->
     <header>
-      <a class="header-logo" href="./index.html"
-        >Web<span class="logo-colored">Studio</span></a
-      >
       <nav>
-        <ul>
+        <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
+
+        <ul class="site-nav">
           <li>
-            <a class="link-studio-current" href="./portfolio.html">Студия</a>
+            <a href="./portfolio.html" class="link current">Студия</a>
           </li>
           <li>
-            <a class="link-portfolio" href="./portfolio.html">Портфолио</a>
+            <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
           <li>
-            <a class="link-contacts" href="./portfolio.html">Контакты</a>
+            <a href="./portfolio.html" class="link">Контакты</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="contacts">
+      <ul class="link-contacts">
         <li>
-          <a class="header-mail-current" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li>
-          <a class="header-contact" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
-    
     <main>
       <!--Секция Герой-->
-      <section class="main-section">
-        <h1 class="main-title">
-          Эффективные решения<br />
+      <section class="hero">
+        <h1 class="hero-title">
+          Эффективные решения
           для вашего бизнеса
         </h1>
 
-        <button type="button" class="main-button">Заказать услугу</button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
       <!--Секция особенности-->
-      <section>
-       <h2 class="visually-hidden">Наши особенности</h2> 
-        <ul class="features">
+      <section class="feature">
+        <h2 class="visually-hidden">Наши особенности</h2>
+        <ul class="feature-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="item">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
 
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="item">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
 
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="item">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
 
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="item">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -102,10 +96,10 @@
         </ul>
       </section>
       <!--Секция наши занятия-->
-      <section>
-        <h2 class="title-deals">Чем мы занимаемся</h2>
+      <section class="skills">
+        <h2 class="skills-title">Чем мы занимаемся</h2>
 
-        <ul>
+        <ul class="skills-list">
           <li>
             <img
               src="./images/work/photo1.jpg"
@@ -136,10 +130,10 @@
       </section>
 
       <!--Секция наша команда-->
-      <section>
-        <h2 class="title-h2">Наша команда</h2>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-face">
             <img
               src="./images/team/product designer.jpg"
               alt="Product
@@ -148,11 +142,11 @@
               height="260"
             />
 
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Игорь Демьяненко</h3>
+            <p class="item">Product Designer</p>
           </li>
 
-          <li>
+          <li class="team-face">
             <img
               src="./images/team/developer.jpg"
               alt="Frontend developer"
@@ -160,10 +154,10 @@
               height="260"
             />
 
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Репина</h3>
+            <p class="item">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-face">
             <img
               src="./images/team/marketing.jpg"
               alt="Marketing"
@@ -171,11 +165,11 @@
               height="260"
             />
 
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Николай Тарасов</h3>
+            <p class="item">Marketing</p>
           </li>
 
-          <li>
+          <li class="team-face">
             <img
               src="./images/team/ui designer.jpg"
               alt="UI designer"
@@ -183,8 +177,8 @@
               height="260"
             />
 
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михаил Ермаков</h3>
+            <p class="item">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -192,14 +186,11 @@
 
     <!--Секция футер-->
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-colored">Studio</span></a
-      >
-      <address>
-        <ul class="footer-list">
+      <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
+      
+        <ul class="footer-contacts">
           <li>
-            <a
-              class="footer-adress"
+            <a class="footer-adress"
               href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
               target="_blank"
               rel="noopener noreferrer"
@@ -208,18 +199,14 @@
           </li>
 
           <li>
-            <a class="footer-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
 
           <li>
-            <a class="footer-contact" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+  
     </footer>
   </body>
 </html>
