--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
-      <!--Секция особенности-->
+      <!--Секция наши особенности-->
       <section class="feature">
         <h2 class="visually-hidden">Наши особенности</h2>
         <ul class="feature-list">
