--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <!--Секция футер-->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
+      <a href="./index.html" class="logo">Web<span class="footer-logo-accent">Studio</span></a>
       
         <ul class="footer-contacts">
           <li>
