--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
     <!-- Секция Footer Портфолио-->
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >Web<span class="logo-accent">Studio</span></a
+        >Web<span class="footer-logo-accent">Studio</span></a
       >
 
       <ul class="footer-contacts">
