--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,13 +15,20 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheets"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Секция хедер-->
     <header>
       <nav>
-        <a href="./index.html" class="logo">Web<span class="logo-accent">Studio</span></a>
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-accent">Studio</span></a
+        >
 
         <ul class="site-nav">
           <li>
@@ -39,7 +45,9 @@
 
       <ul class="link-contacts">
         <li>
-          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
@@ -50,10 +58,7 @@
     <main>
       <!--Секция Герой-->
       <section class="hero">
-        <h1 class="hero-title">
-          Эффективные решения
-          для вашего бизнеса
-        </h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
 
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
@@ -186,27 +191,31 @@
 
     <!--Секция футер-->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="footer-logo-accent">Studio</span></a>
-      
-        <ul class="footer-contacts">
-          <li>
-            <a class="footer-adress"
-              href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
+      <a href="./index.html" class="logo"
+        >Web<span class="footer-logo-accent">Studio</span></a
+      >
 
-          <li>
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-          </li>
+      <ul class="footer-contacts">
+        <li>
+          <a
+            class="footer-adress"
+            href="https://goo.gl/maps/L6uv8u9PRKbwjHMY9"
+            target="_blank"
+            rel="noopener noreferrer"
+            >г. Киев, пр-т Леси Украинки, 26</a
+          >
+        </li>
 
-          <li>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-  
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+
+        <li>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
