Update html and css files

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
         <h2 class="visually-hidden">Наши особенности</h2>
         <ul class="feature-list">
-          <li>
+          <li class="link">
             <h3 class="title">Внимание к деталям</h3>
             <p class="item">
               Идейные соображения, а также начало повседневной работы по
@@ -80,7 +80,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="link">
             <h3 class="title">Пунктуальность</h3>
             <p class="item">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -88,7 +88,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="link">
             <h3 class="title">Планирование</h3>
             <p class="item">
               Равным образом консультация с широким активом в значительной
@@ -96,7 +96,7 @@
             </p>
           </li>
 
-          <li>
+          <li class="link">
             <h3 class="title">Современные технологии</h3>
             <p class="item">
               Значимость этих проблем настолько очевидна, что реализация
@@ -206,7 +206,7 @@
     <!--Секция футер-->
     <footer class="footer">
       <div class="container">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="footer-logo"
         >Web<span class="footer-logo-accent">Studio</span></a
       >
 
