--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@
     <footer class="footer">
       <div class="container">
 
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="footer-logo"
         >Web<span class="footer-logo-accent">Studio</span></a
       >
 
