--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
       <ul class="link-contacts">
         <li class="item">
           <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+            >
+            <svg class="link-icon" width="16px" height="12px"> <use href="./images/icons.svg.svg#icon-envelope"></use> </svg>info@devstudio.com</a
           >
+
+
+
+         
+
         </li>
         <li class="item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
