--- a/portfolio.html
+++ b/portfolio.html
@@ -46,11 +46,17 @@
       <ul class="link-contacts">
         <li class="item">
           <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
+            >
+            <svg class="link-icon" width="16px" height="12px">
+              <use href="./images/symbol-defs.svg.svg#icon-letter"></use>
+          </svg>info@devstudio.com</a
           >
         </li>
         <li class="item">
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">
+            <svg class="link-icon" width="16px" height="12px">
+              <use href="./images/symbol-defs.svg.svg#icon-letter"></use>
+          </svg>+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
